--- a/mods/ts/sequences/misc.yaml
+++ b/mods/ts/sequences/misc.yaml
@@ -1192,6 +1192,20 @@ fsidle_bg:
 		AlphaFade: True
 		MeshType: Board
 
+fxring:
+	Defaults: FX_Ring.png
+		Length: *
+		BlendMode: Additive
+		ZOffset: 1525
+		Tick: 30
+		IgnoreWorldTint: true
+		MeshType: Board
+		AddExtension: false
+	sonicburst: FX_Ring.png
+		Frames: 0,0,0,0,0,  0,0,0,0,0,  0,0,0,0,0
+		AlphaFade: True
+		Scale: 0.1
+
 lineidle_loop:
 	Defaults:
 		Length: *
